crates/ox_content_napi/src/tests/snapshots/ox_content_napi__tests__runtime_features__builds_search_index_from_directory.snap
---
source: crates/ox_content_napi/src/tests/runtime_features.rs
expression: "index.documents[0].body"
---
Search body text.
