crates/ox_content_napi/src/tests/snapshots/ox_content_napi__tests__runtime_features__generates_search_module_from_typed_options.snap
---
source: crates/ox_content_napi/src/tests/runtime_features.rs
expression: module
---
// Search module generated by ox-content
const searchOptions = {"enabled":true,"limit":7,"prefix":false,"fuzzy":true,"placeholder":"Find","hotkey":"k"};
const BM25_K1 = 1.2;
const BM25_B = 0.75;
const MIN_PREFIX_MATCH_LENGTH = 2;
const MIN_FUZZY_MATCH_LENGTH = 3;
const SNIPPET_CONTEXT_CHARS = 50;
const SNIPPET_MAX_CHARS = 150;
const SNIPPET_ELLIPSIS = "...";

let searchIndex = null;
let indexPromise = null;

function parseScopedQuery(query) {
  const scopes = [];
  const terms = [];

  for (const part of query.trim().split(/\s+/).filter(Boolean)) {
    if (part.startsWith("@") && part.length > 1) {
      scopes.push(part.slice(1).toLowerCase());
    } else {
      terms.push(part);
    }
  }

  return {
    text: terms.join(" ").trim(),
    scopes: [...new Set(scopes)],
  };
}

function getScopesForDoc(doc) {
  const source = (doc.id || doc.url || "").replace(/^\/+/, "").toLowerCase();
  const segments = source.split("/").filter(Boolean);

  if (segments.length <= 1) {
    return [];
  }

  const scopes = [];
  let current = "";
  for (const segment of segments.slice(0, -1)) {
    current = current ? current + "/" + segment : segment;
    scopes.push(current);
  }

  return scopes;
}

function matchesScopes(doc, scopes) {
  if (!scopes.length) {
    return true;
  }

  // A doc's scopes derive only from its immutable id/url, but this predicate
  // runs once per posting per term. Cache the Set on the document so later
  // postings and keystrokes are one property read plus `Set.has`.
  const docScopes = doc.__oxScopes || (doc.__oxScopes = new Set(getScopesForDoc(doc)));
  return scopes.some((scope) => docScopes.has(scope));
}

function firstPathSegment(path) {
  let start = 0;
  while (path.charCodeAt(start) === 47) start++;
  if (start >= path.length) return "";
  const slash = path.indexOf("/", start);
  return (slash === -1 ? path.slice(start) : path.slice(start, slash)).toLowerCase();
}

function normalizeLocaleFilter(options, defaults) {
  const locale = (options.locale || "").toLowerCase();
  if (!locale) return null;

  const localeCodes = new Set();
  const codes = options.localeCodes || defaults.localeCodes || [];
  for (let i = 0; i < codes.length; i++) {
    if (codes[i]) localeCodes.add(codes[i].toLowerCase());
  }

  const rawPrefixes = options.versionPrefixes || defaults.versionPrefixes || [];
  const prefixes = [];
  for (let i = 0; i < rawPrefixes.length; i++) {
    const prefix = (rawPrefixes[i] || "").replace(/^\/+|\/+$/g, "").toLowerCase();
    if (prefix) prefixes.push(prefix);
  }
  if (prefixes.length > 1) prefixes.sort((left, right) => right.length - left.length);

  return {
    locale,
    localeCodes,
    defaultLocale: (options.defaultLocale || defaults.defaultLocale || "en").toLowerCase(),
    prefixes,
    cacheKey: locale + "\0" + prefixes.join("/"),
  };
}

function localeForDoc(doc, filter) {
  if (doc.__oxLocaleKey === filter.cacheKey) return doc.__oxLocale;

  let source = (doc.id || doc.url || "").replace(/^\/+/, "").toLowerCase();
  for (let i = 0; i < filter.prefixes.length; i++) {
    const prefix = filter.prefixes[i];
    if (source === prefix) {
      source = "";
      break;
    }
    if (source.startsWith(prefix) && source.charCodeAt(prefix.length) === 47) {
      source = source.slice(prefix.length + 1);
      break;
    }
  }

  const first = firstPathSegment(source);
  const locale = first && filter.localeCodes.has(first) ? first : filter.defaultLocale;
  doc.__oxLocaleKey = filter.cacheKey;
  doc.__oxLocale = locale;
  return locale;
}

function matchesLocale(doc, filter) {
  return !filter || localeForDoc(doc, filter) === filter.locale;
}

function tokenizeQuery(text) {
  const tokens = [];
  let current = "";

  for (const char of text) {
    const isCjk = /[\u4E00-\u9FFF\u3400-\u4DBF\u3040-\u309F\u30A0-\u30FF\uAC00-\uD7AF]/.test(char);

    if (isCjk) {
      if (current) {
        tokens.push(current.toLowerCase());
        current = "";
      }
      tokens.push(char);
    } else if (/[a-zA-Z0-9_]/.test(char)) {
      current += char;
    } else if (current) {
      tokens.push(current.toLowerCase());
      current = "";
    }
  }

  if (current) {
    tokens.push(current.toLowerCase());
  }

  return tokens;
}

function computeIdf(df, docCount) {
  return Math.log((docCount - df + 0.5) / (df + 0.5) + 1.0);
}

function getFieldBoost(field) {
  switch (field) {
    case "Title":
      return 10.0;
    case "Heading":
      return 5.0;
    case "Body":
      return 1.0;
    case "Code":
      return 0.5;
    default:
      return 1.0;
  }
}

function fuzzyWeight(query, term) {
  if (query.length < MIN_FUZZY_MATCH_LENGTH || term.length < MIN_FUZZY_MATCH_LENGTH) return 0;
  const maxDistance = Math.max(query.length, term.length) >= 6 ? 2 : 1;
  if (Math.abs(query.length - term.length) > maxDistance) return 0;
  let previous = Array.from({ length: term.length + 1 }, (_, index) => index);
  for (let row = 1; row <= query.length; row++) {
    const current = [row];
    let rowMin = row;
    const queryCode = query.charCodeAt(row - 1);
    for (let column = 1; column <= term.length; column++) {
      const cost = queryCode === term.charCodeAt(column - 1) ? 0 : 1;
      const value = Math.min(
        previous[column] + 1,
        current[column - 1] + 1,
        previous[column - 1] + cost,
      );
      current[column] = value;
      if (value < rowMin) rowMin = value;
    }
    if (rowMin > maxDistance) return 0;
    previous = current;
  }
  const distance = previous[term.length];
  return distance === 1 ? 0.65 : distance === 2 ? 0.4 : 0;
}

async function loadIndex() {
  if (searchIndex) return searchIndex;
  if (indexPromise) return indexPromise;

  indexPromise = fetch("/docs/search-index.json")
    .then((res) => res.json())
    .then((data) => {
      searchIndex = data;
      return data;
    })
    .catch((err) => {
      console.error("[ox-content] Failed to load search index:", err);
      return null;
    });

  return indexPromise;
}

export async function search(query, options = {}) {
  const index = await loadIndex();

  if (!index) {
    return [];
  }

  const parsedQuery = parseScopedQuery(query);

  if (!parsedQuery.text && parsedQuery.scopes.length === 0) {
    return [];
  }

  const limit = options.limit ?? searchOptions.limit;
  const prefix = options.prefix ?? searchOptions.prefix;
  const fuzzy = options.fuzzy ?? searchOptions.fuzzy ?? false;
  const localeFilter = normalizeLocaleFilter(options, searchOptions);
  const tokens = tokenizeQuery(parsedQuery.text);

  const docScores = new Map();

  if (tokens.length === 0) {
    index.documents.forEach((doc, docIdx) => {
      if (matchesLocale(doc, localeFilter) && matchesScopes(doc, parsedQuery.scopes)) {
        docScores.set(docIdx, { score: 0, matches: new Set() });
      }
    });
  }

  const scoreTerm = (term, weight = 1) => {
    const postings = index.index[term] || [];
    const df = index.df[term] || 1;
    const idf = computeIdf(df, index.doc_count);

    for (const posting of postings) {
      const doc = index.documents[posting.doc_idx];
      if (!doc) continue;
      if (!matchesLocale(doc, localeFilter) || !matchesScopes(doc, parsedQuery.scopes)) continue;

      const docLen = doc.body.length;
      const tf = posting.tf;
      const boost = getFieldBoost(posting.field);
      const score =
        idf *
        ((tf * (BM25_K1 + 1.0)) /
          (tf + BM25_K1 * (1.0 - BM25_B + (BM25_B * docLen) / index.avg_dl))) *
        boost *
        weight;

      // One Map lookup in the steady state: this runs once per posting per
      // term on every query, so skip the `has` + `get` pair.
      let entry = docScores.get(posting.doc_idx);
      if (entry === undefined) {
        entry = { score: 0, matches: new Set() };
        docScores.set(posting.doc_idx, entry);
      }
      entry.score += score;
      entry.matches.add(term);
    }
  };

  for (let i = 0; i < tokens.length; i++) {
    const token = tokens[i];
    const isLast = i === tokens.length - 1;

    if (prefix && isLast && token.length >= MIN_PREFIX_MATCH_LENGTH) {
      // Only the active final token expands across the vocabulary. Completed
      // tokens score exact postings, keeping multi-word queries from
      // multiplying prefix scan cost by token count.
      for (const term in index.index) if (term.startsWith(token)) scoreTerm(term);
    } else if (index.index[token]) {
      scoreTerm(token);
    }

    if (fuzzy) {
      for (const term in index.index) {
        if (term === token || (prefix && isLast && term.startsWith(token))) continue;
        const weight = fuzzyWeight(token, term);
        if (weight > 0) scoreTerm(term, weight);
      }
    }
  }

  const results = Array.from(docScores.entries())
    .sort(([leftDocIdx, leftData], [rightDocIdx, rightData]) => {
      const scoreOrder = rightData.score - leftData.score;
      if (scoreOrder !== 0) return scoreOrder;

      const leftDoc = index.documents[leftDocIdx];
      const rightDoc = index.documents[rightDocIdx];
      return (leftDoc?.title || "").localeCompare(rightDoc?.title || "");
    })
    .slice(0, limit)
    .map(([docIdx, data]) => {
      // Snippets require lowercasing and scanning the document body, so they
      // are built only after ranking and limiting rather than for every scored
      // candidate.
      const doc = index.documents[docIdx];
      const matches = Array.from(data.matches);
      const scopes = getScopesForDoc(doc);

      let snippet = "";
      if (doc.body) {
        const bodyLower = doc.body.toLowerCase();
        let firstPos = -1;
        for (const match of matches) {
          const pos = bodyLower.indexOf(match);
          if (pos !== -1 && (firstPos === -1 || pos < firstPos)) {
            firstPos = pos;
          }
        }

        const start = firstPos === -1 ? 0 : Math.max(0, firstPos - SNIPPET_CONTEXT_CHARS);
        const end = Math.min(doc.body.length, start + SNIPPET_MAX_CHARS);
        snippet = doc.body.slice(start, end);
        if (start > 0) snippet = SNIPPET_ELLIPSIS + snippet;
        if (end < doc.body.length) snippet = snippet + SNIPPET_ELLIPSIS;
      }

      return {
        id: doc.id,
        title: doc.title,
        url: doc.url,
        score: data.score,
        matches,
        snippet,
        scopes,
      };
    });

  return results;
}

export { searchOptions };
export default { search, searchOptions, loadIndex };
