crates/ox_content_napi/src/tests/snapshots/ox_content_napi__tests__runtime_features__javascript_wrapper_expected_exports.snap
---
source: crates/ox_content_napi/src/tests/runtime_features.rs
expression: "expected_exports.join(\"\\n\")"
---
buildCollectionManifest
buildSearchIndex
buildSearchIndexFromDirectory
buildSsgNavItems
buildSsgThemeNavItems
buildExportGraph
checkI18n
checkI18nProject
checkLinks
checkMdc
classifyPublishState
collectDocsSourceFiles
collectSearchMarkdownFiles
collectSsgMarkdownFiles
escapeSvelteMarkup
externalizeSsgAssets
extractCodeBlocks
extractDocsFromDirectories
extractDocsFromEntryPoints
extractDocsTests
extractFileDocEntries
extractFileDocs
extractSearchContent
extractSsgTitle
extractTranslationKeys
extractYoutubeVideoId
formatSsgTitle
generateFeedBodies
generateDocsDataJson
generateDocsMarkdown
generateDocsNavCode
generateDocsNavMetadata
generateDocsNavMetadataFromDocs
generateI18nModule
generateOgImageSvg
generateSearchModule
generateSearchModuleFromOptions
generateSiteMapBodies
generateSsgBareHtml
generateSsgBarePage
highlightCodeBlock
highlightHtmlCodeBlocks
highlightHtmlCodeBlocksAsync
nativeHighlightLanguages
supportsHighlightLanguage
generateSsgHtml
generateSsgHtmlPages
getGitContributors
getGitLastUpdated
getGitLastUpdatedMany
getSearchDocumentScopes
getSsgHref
getSsgOutputPath
getSsgPageLocale
getSsgUrlPath
isSafeRedirectDest
lintCodeBlocks
fixMarkdown
lintMarkdown
lintMarkdownDocuments
loadDictionaries
loadDictionariesFlat
matchesSearchScopes
mediaEmbedTags
mergeHighlightedCodeBlocks
normalizeRedirectPath
normalizeVitePressFrontmatter
parse
parseAndRender
parseAndRenderAsync
parseFrontmatter
parseFeedDate
parseMdastRaw
parseScopedSearchQuery
parseTransferRaw
planRedirects
prepareSource
prepareSourceRaw
render
renderFrameworkComponentCode
renderHead
renderRedirectHtml
renderSsgSectionIndex
resolveSsgNavigationGroups
resolveSsgPageRoutes
resolveSsgRoutePaths
runAuthoringCli
runLspStdio
sanitizeHtml
searchIndex
stringifyFrontmatter
transform
transformAsync
transformCrossReferences
transformMediaEmbeds
transformMediaEmbedsWithDiagnostics
transformMdast
transformMdastRaw
transformFromMdast
transformPmEmbeds
transformTabsEmbeds
transformMermaid
transformYoutubeEmbeds
validateMf2
version
writeGeneratedDocs
writeSearchIndex
