crates/ox_content_napi/src/tests/snapshots/ox_content_napi__tests__runtime_features__javascript_wrapper_native_load_errors.snap
---
source: crates/ox_content_napi/src/tests/runtime_features.rs
expression: index_js
---
const { execSync } = require("child_process");
const { existsSync, readFileSync } = require("fs");
const path = require("path");

function getErrorCode(error) {
  if (error && typeof error === "object" && "code" in error) {
    return error.code;
  }
}

function getErrorMessage(error) {
  if (error && typeof error === "object" && "message" in error) {
    return error.message;
  }
  return String(error);
}

function formatLoadError(target, error) {
  const code = getErrorCode(error);
  const suffix = code ? ` [${code}]` : "";
  return `  - ${target}${suffix}: ${getErrorMessage(error)}`;
}

function isFileMusl(file) {
  return file.includes("libc.musl-") || file.includes("ld-musl-");
}

function isMuslFromFilesystem() {
  try {
    return readFileSync("/usr/bin/ldd", "utf8").includes("musl");
  } catch {
    return null;
  }
}

function isMuslFromReport() {
  if (typeof process.report?.getReport !== "function") {
    return null;
  }

  const report = process.report.getReport();
  if (report.header?.glibcVersionRuntime) {
    return false;
  }
  if (Array.isArray(report.sharedObjects)) {
    return report.sharedObjects.some(isFileMusl);
  }

  return false;
}

function isMuslFromChildProcess() {
  try {
    return execSync("ldd --version", { encoding: "utf8" }).includes("musl");
  } catch {
    return false;
  }
}

function isMusl() {
  if (process.platform !== "linux") {
    return false;
  }

  const filesystemResult = isMuslFromFilesystem();
  if (filesystemResult !== null) {
    return filesystemResult;
  }

  const reportResult = isMuslFromReport();
  if (reportResult !== null) {
    return reportResult;
  }

  return isMuslFromChildProcess();
}

function loadBinding() {
  const loadErrors = [];

  // 1. Try loading the local binary (napi build output)
  const napiOutput = path.join(__dirname, "ox-content.node");
  if (existsSync(napiOutput)) {
    return require(napiOutput);
  }

  // 1b. Legacy: index.node (napi-rs v2)
  const localBinary = path.join(__dirname, "index.node");
  if (existsSync(localBinary)) {
    return require(localBinary);
  }

  // 2. Try platform-specific binary in same directory (CI build artifact)
  const platform = process.platform;
  const arch = process.arch;

  const platforms = {
    "darwin-arm64": "ox-content.darwin-arm64.node",
    "darwin-x64": "ox-content.darwin-x64.node",
    "linux-x64-gnu": "ox-content.linux-x64-gnu.node",
    "linux-x64-musl": "ox-content.linux-x64-musl.node",
    "linux-arm64-gnu": "ox-content.linux-arm64-gnu.node",
    "linux-arm64-musl": "ox-content.linux-arm64-musl.node",
    "win32-x64-msvc": "ox-content.win32-x64-msvc.node",
  };

  let key;
  if (platform === "darwin") {
    key = `darwin-${arch}`;
  } else if (platform === "linux") {
    key = `linux-${arch}-${isMusl() ? "musl" : "gnu"}`;
  } else if (platform === "win32") {
    key = `win32-${arch}-msvc`;
  }

  const binaryName = platforms[key];
  if (binaryName) {
    const binaryPath = path.join(__dirname, binaryName);
    if (existsSync(binaryPath)) {
      return require(binaryPath);
    }
  }

  // 3. Try npm sub-packages (@ox-content/binding-darwin-arm64 etc.)
  const subPackages = {
    "darwin-arm64": "@ox-content/binding-darwin-arm64",
    "darwin-x64": "@ox-content/binding-darwin-x64",
    "linux-x64-gnu": "@ox-content/binding-linux-x64-gnu",
    "linux-x64-musl": "@ox-content/binding-linux-x64-musl",
    "linux-arm64-gnu": "@ox-content/binding-linux-arm64-gnu",
    "linux-arm64-musl": "@ox-content/binding-linux-arm64-musl",
    "win32-x64-msvc": "@ox-content/binding-win32-x64-msvc",
  };

  const subPackage = subPackages[key];
  if (subPackage) {
    try {
      return require(subPackage);
    } catch (error) {
      loadErrors.push(formatLoadError(subPackage, error));
    }
  }

  const details = loadErrors.length
    ? `\n\nNative load attempts failed:\n${loadErrors.join("\n")}`
    : "";

  throw new Error(
    `@ox-content/napi: No compatible binary found for ${platform}-${arch}. ` +
      `If you're working from the repository, run 'nix develop -c vp run build:napi' from the repository root.` +
      details,
  );
}

const binding = loadBinding();

// Export individual functions for ESM compatibility
module.exports = binding;
module.exports.parse = binding.parse;
module.exports.parseFrontmatter = binding.parseFrontmatter;
module.exports.parseTransferRaw = binding.parseTransferRaw;
module.exports.parseMdastRaw = binding.parseMdastRaw;
module.exports.parseAndRender = binding.parseAndRender;
module.exports.parseAndRenderAsync = binding.parseAndRenderAsync;
module.exports.IncrementalMarkdownParser = binding.IncrementalMarkdownParser;
module.exports.IncrementalMarkdownRenderer = binding.IncrementalMarkdownRenderer;
module.exports.prepareSource = binding.prepareSource;
module.exports.prepareSourceRaw = binding.prepareSourceRaw;
module.exports.stringifyFrontmatter = binding.stringifyFrontmatter;
module.exports.fixMarkdown = binding.fixMarkdown;
module.exports.lintMarkdown = binding.lintMarkdown;
module.exports.lintMarkdownDocuments = binding.lintMarkdownDocuments;
module.exports.render = binding.render;
module.exports.transform = binding.transform;
module.exports.transformAsync = binding.transformAsync;
module.exports.transformMdastRaw = binding.transformMdastRaw;
module.exports.transformMdast = binding.transformMdast;
module.exports.transformFromMdast = binding.transformFromMdast;
module.exports.sanitizeHtml = binding.sanitizeHtml;
module.exports.transformMediaEmbeds = binding.transformMediaEmbeds;
module.exports.transformMediaEmbedsWithDiagnostics = binding.transformMediaEmbedsWithDiagnostics;
module.exports.transformPmEmbeds = binding.transformPmEmbeds;
module.exports.transformTabsEmbeds = binding.transformTabsEmbeds;
module.exports.transformYoutubeEmbeds = binding.transformYoutubeEmbeds;
module.exports.extractYoutubeVideoId = binding.extractYoutubeVideoId;
module.exports.extractCodeBlocks = binding.extractCodeBlocks;
module.exports.lintCodeBlocks = binding.lintCodeBlocks;
module.exports.extractDocsTests = binding.extractDocsTests;
module.exports.version = binding.version;
module.exports.extractFileDocs = binding.extractFileDocs;
module.exports.extractFileDocEntries = binding.extractFileDocEntries;
module.exports.buildExportGraph = binding.buildExportGraph;
module.exports.extractDocsFromDirectories = binding.extractDocsFromDirectories;
module.exports.extractDocsFromEntryPoints = binding.extractDocsFromEntryPoints;
module.exports.generateDocsNavMetadata = binding.generateDocsNavMetadata;
module.exports.generateDocsNavMetadataFromDocs = binding.generateDocsNavMetadataFromDocs;
module.exports.generateDocsNavCode = binding.generateDocsNavCode;
module.exports.collectDocsSourceFiles = binding.collectDocsSourceFiles;
module.exports.generateDocsDataJson = binding.generateDocsDataJson;
module.exports.generateDocsMarkdown = binding.generateDocsMarkdown;
module.exports.generateOpenApiDocs = binding.generateOpenApiDocs;
module.exports.writeGeneratedDocs = binding.writeGeneratedDocs;
module.exports.buildCollectionManifest = binding.buildCollectionManifest;
module.exports.mergeHighlightedCodeBlocks = binding.mergeHighlightedCodeBlocks;
module.exports.generateOgImageSvg = binding.generateOgImageSvg;
module.exports.buildSearchIndex = binding.buildSearchIndex;
module.exports.buildSearchIndexFromDirectory = binding.buildSearchIndexFromDirectory;
module.exports.classifyPublishState = binding.classifyPublishState;
module.exports.writeSearchIndex = binding.writeSearchIndex;
module.exports.searchIndex = binding.searchIndex;
module.exports.extractSearchContent = binding.extractSearchContent;
module.exports.parseScopedSearchQuery = binding.parseScopedSearchQuery;
module.exports.getSearchDocumentScopes = binding.getSearchDocumentScopes;
module.exports.matchesSearchScopes = binding.matchesSearchScopes;
module.exports.generateSearchModule = binding.generateSearchModule;
module.exports.generateSearchModuleFromOptions = binding.generateSearchModuleFromOptions;
module.exports.collectSearchMarkdownFiles = binding.collectSearchMarkdownFiles;
module.exports.normalizeVitePressFrontmatter = binding.normalizeVitePressFrontmatter;
module.exports.generateSsgHtml = binding.generateSsgHtml;
module.exports.generateSsgHtmlPages = binding.generateSsgHtmlPages;
module.exports.renderHead = binding.renderHead;
module.exports.applySsgReaderChromeHtml = binding.applySsgReaderChromeHtml;
module.exports.getSsgReaderChromeCss = binding.getSsgReaderChromeCss;
module.exports.getSsgReaderChromeScript = binding.getSsgReaderChromeScript;
module.exports.generateSsgBareHtml = binding.generateSsgBareHtml;
module.exports.highlightCodeBlock = binding.highlightCodeBlock;
module.exports.applyPendingHighlights = binding.applyPendingHighlights;
module.exports.highlightHtmlCodeBlocks = binding.highlightHtmlCodeBlocks;
module.exports.highlightHtmlCodeBlocksAsync = binding.highlightHtmlCodeBlocksAsync;
module.exports.supportsHighlightLanguage = binding.supportsHighlightLanguage;
module.exports.nativeHighlightLanguages = binding.nativeHighlightLanguages;
module.exports.generateSsgBarePage = binding.generateSsgBarePage;
module.exports.getGitLastUpdated = binding.getGitLastUpdated;
module.exports.getGitLastUpdatedMany = binding.getGitLastUpdatedMany;
module.exports.getGitContributors = binding.getGitContributors;
module.exports.resolveSsgPageRoutes = binding.resolveSsgPageRoutes;
module.exports.resolveSsgRoutePaths = binding.resolveSsgRoutePaths;
module.exports.getSsgOutputPath = binding.getSsgOutputPath;
module.exports.getSsgUrlPath = binding.getSsgUrlPath;
module.exports.getSsgHref = binding.getSsgHref;
module.exports.getSsgPageLocale = binding.getSsgPageLocale;
module.exports.extractSsgTitle = binding.extractSsgTitle;
module.exports.formatSsgTitle = binding.formatSsgTitle;
module.exports.buildSsgNavItems = binding.buildSsgNavItems;
module.exports.buildSsgThemeNavItems = binding.buildSsgThemeNavItems;
module.exports.resolveSsgNavigationGroups = binding.resolveSsgNavigationGroups;
module.exports.collectSsgMarkdownFiles = binding.collectSsgMarkdownFiles;
module.exports.externalizeSsgAssets = binding.externalizeSsgAssets;
module.exports.transformMermaid = binding.transformMermaid;
module.exports.loadDictionaries = binding.loadDictionaries;
module.exports.loadDictionariesFlat = binding.loadDictionariesFlat;
module.exports.generateI18nModule = binding.generateI18nModule;
module.exports.validateMf2 = binding.validateMf2;
module.exports.checkI18n = binding.checkI18n;
module.exports.checkI18nProject = binding.checkI18nProject;
module.exports.checkLinks = binding.checkLinks;
module.exports.runLspStdio = binding.runLspStdio;
module.exports.runAuthoringCli = binding.runAuthoringCli;
module.exports.checkMdc = binding.checkMdc;
module.exports.extractTranslationKeys = binding.extractTranslationKeys;
module.exports.renderFrameworkComponentCode = binding.renderFrameworkComponentCode;
module.exports.renderSsgSectionIndex = binding.renderSsgSectionIndex;
module.exports.parseFeedDate = binding.parseFeedDate;
module.exports.generateFeedBodies = binding.generateFeedBodies;
module.exports.mediaEmbedTags = binding.mediaEmbedTags;
module.exports.transformCrossReferences = binding.transformCrossReferences;
module.exports.planRedirects = binding.planRedirects;
module.exports.renderRedirectHtml = binding.renderRedirectHtml;
module.exports.isSafeRedirectDest = binding.isSafeRedirectDest;
module.exports.normalizeRedirectPath = binding.normalizeRedirectPath;
module.exports.generateSiteMapBodies = binding.generateSiteMapBodies;
module.exports.escapeSvelteMarkup = binding.escapeSvelteMarkup;
