crates/ox_content_napi/src/tests/snapshots/ox_content_napi__tests__runtime_features__transform_passes_toc_depth_to_inline_toc.snap
---
source: crates/ox_content_napi/src/tests/runtime_features.rs
expression: result.html
---
<nav class="ox-toc" aria-label="Table of contents">
<ul>
<li class="ox-toc__item ox-toc__item--depth-2"><a href="#intro">Intro</a></li>
</ul>
</nav>
<h2 id="intro">Intro</h2>
<h3 id="api">API</h3>
